syntax = "proto3";

option go_package = "proto/coupon";

import "google/protobuf/timestamp.proto";

message Coupon {
  int64 id = 1;
  string coupon_hash = 2;
  float discount_percentage = 3;
  google.protobuf.Timestamp discount_expiration = 4;
  int32 applicable_tour_id = 5;
  int32 coupon_issuer_id = 6;
  bool is_applicable_to_all_user_tours = 7;
  bool is_valid = 8;
}

service CouponService {
  rpc CreateCoupon(Coupon) returns (CreateCouponResponse) {}
  rpc RemoveCoupon(RemoveCouponRequest) returns (RemoveCouponResponse) {}
}

message CreateCouponResponse {}

message RemoveCouponRequest {
  string hash = 1;
  int32 user_id = 2;
}

message RemoveCouponResponse {}